# src/servers/http/router.go
@@ -6,7 +6,6 @@ import (
 	"time"
 
 	"github.com/MultiBanker/broker/src/servers/http/resources/health"
-	"github.com/MultiBanker/broker/src/servers/http/resources/market"
 	"github.com/go-chi/chi"
 
 	"github.com/MultiBanker/broker/src/config"
@@ -33,7 +32,6 @@ func Routing(opts *config.Config, man manager.Abstractor) chi.Router {
 		r.Route("/broker", func(r chi.Router) {
 			r.Mount("/partners", partner.NewAuth(man.Partnerer(), man.Auther()).Route())
 			r.Mount("/orders", orderresource.NewOrder(man.Orderer()).Route())
-			r.Mount("/markets", market.NewResource(man.Auther(), man.Marketer()).Route())
 		})
 	})
 
